# backtracking-algorithm

./: .gitignore  CMakeLists.txt  README.md
inc/: board.hpp  constraint.hpp  crossword.hpp  dictionary.hpp  utils.hpp  word_footprint.hpp
others/: Doxyfile
others/examples/: board_example.cpp
src/: board.cpp  constraint.cpp  crossword.cpp  dictionary.cpp  main.cpp  utils.cpp  word_footprint.cpp
tests/: CMakeLists.txt  tests.cpp
